# jasper-app

./: .gitignore  MIGRATION.md  README.md  app.ts  build-ui.mjs  docker-compose.ts  docker-compose.yaml  electron-builder.json  index.html  loading.html  logs.html  package-lock.json  package.json  preload.js  settings-renderer.js  settings.css  settings.html  settings.ts  tauri-shim.js  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: docker.rs  lib.rs  main.rs  settings.rs  state.rs  windows.rs
