[package]
name = "jasper-app"
version = "1.0.98"
description = "Desktop app for Jasper KM"
authors = ["Chris Malloy <cjmalloy@gmail.com>"]
license = "MIT"
repository = "https://github.com/cjmalloy/jasper-app"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
