[package]
name = "jasper-app"
version = "1.1.12"
description = "Desktop app for Jasper KM"
authors = ["Chris Malloy <cjmalloy@gmail.com>"]
license = "MIT"
repository = "https://github.com/cjmalloy/jasper-app"
edition = "2021"

[lib]
name = "jasper_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
sys-locale = "0.3"
ansi-to-html = "0.2"

[profile.release]
codegen-units = 1
lto = true
strip = true
